kubernetes/apps/gotify/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: gotify
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gotify.pxldi.de`)
      priority: 10
      services:
        - name: gotify
          port: 80
